objects/pse__Create_Billing_Documents_Batch_Log__c.object
<CustomObject>
    <customHelpPage>pse__CreateBillingDocumentsBatchLogHelp</customHelpPage>
    <description>Stores the results of each Create Billing Documents Batch iteration.</description>
    <fields>
        <fullName>pse__Create_Billing_Documents_Batch__c</fullName>
        <description>Master-Detail link to the related Create Billing Documents Batch record.</description>
        <inlineHelpText>Master-Detail link to the related Create Billing Documents Batch record.</inlineHelpText>
        <label>Create Billing Documents Batch</label>
        <referenceTo>pse__Create_Billing_Documents_Batch__c</referenceTo>
        <relationshipLabel>Create Billing Documents Batch Logs</relationshipLabel>
        <relationshipName>Create_Billing_Documents_Batch_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Log_Type__c</fullName>
        <description>Indicates the type of log (Error, Information, Abort, External).</description>
        <inlineHelpText>Indicates the type of log (Error, Information, Abort, External).</inlineHelpText>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Message__c</fullName>
        <description>The text of the message.</description>
        <inlineHelpText>The text of the message.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Create Billing Documents Batch Log</label>
    <nameField>
        <displayFormat>CBDBL-{000000}</displayFormat>
        <label>Create Billing Documents Batch Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Create Billing Documents Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>